New: SessionResource - loginurl begonnen (#5)
