# apps/matheportal-shell/src/main/java/de/mathejungalt/matheportal/shell/domain/ErrorResponse.java
@@ -1,19 +1,0 @@
-package de.mathejungalt.matheportal.shell.domain;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-
-/**
- * ErrorResponse.
- */
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-@Getter
-public class ErrorResponse {
-
-    private String message;
-
-}
